--- a/examples/simple-example/index.html
+++ b/examples/simple-example/index.html
@@ -3,8 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Sheath.js | Simple Example</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	</head>
 	<body>
-		
+		<script src="../../src/sheath.js"></script>
+		<script src="modules.js"></script>
 	</body>
 </html>
